<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_new_tab"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_new_tab" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/menu_bookmarks"
        android:icon="@drawable/ic_bookmarks"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/menu_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/menu_downloads" />
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/ic_language"
        android:title="@string/menu_language" />
    <item
        android:id="@+id/menu_adblock"
        android:icon="@drawable/ic_block"
        android:title="@string/menu_adblock"
        android:checkable="true" />
</menu>
